--- a/win/rc/itk.rc
+++ b/win/rc/itk.rc
@@ -1,28 +1,43 @@
-// RCS: @(#) $Id: itk.rc,v 1.4 2001/05/22 00:39:12 davygrvy Exp $
+// RCS: @(#) $Id: itk.rc,v 1.5 2001/05/22 06:25:48 davygrvy Exp $
 //
-// Version
+// Version resource script.
 //
 
-#define RESOURCE_INCLUDED
+#include <windows.h>
 #include <itcl.h>
-#include <itk.h>
+
+//
+// build-up the name suffix that defines the type of build this is.
+//
+#if DEBUG == 1
+#define SUFFIX_DEBUG	    "d"
+#else
+#define SUFFIX_DEBUG	    ""
+#endif
+
+#define SUFFIX		    SUFFIX_DEBUG
+
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION    ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL
  PRODUCTVERSION ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL
  FILEFLAGSMASK	0x3fL
+#ifdef DEBUG
+ FILEFLAGS	VS_FF_DEBUG
+#else
  FILEFLAGS	0x0L
- FILEOS		0x4L
- FILETYPE	0x1L
+#endif
+ FILEOS		VOS__WINDOWS32
+ FILETYPE	VFT_DLL
  FILESUBTYPE	0x0L
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "FileDescription", "[incr Tk] Object-Oriented Wish Application\0"
+            VALUE "FileDescription", "[incr Tk] Object-Oriented Tk extension\0"
             VALUE "Authors", "Michael McLennan\0"
-            VALUE "OriginalFilename", "itk" STRINGIFY(JOIN(ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION)) ".dll\0"
+            VALUE "OriginalFilename", "itk" STRINGIFY(JOIN(ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION)) SUFFIX ".dll\0"
             VALUE "CompanyName", "Bell Labs Innovations for Lucent Technologies\0"
             VALUE "FileVersion", ITCL_PATCH_LEVEL
             VALUE "LegalCopyright", "Copyright \251 1993-2001\0"
@@ -35,3 +50,9 @@ BEGIN
         VALUE "Translation", 0x409, 1200
     END
 END
+
+//
+// Icons
+//
+
+toaster		ICON	DISCARDABLE	"itk.ico"
