--- a/win/rc/itk.rc
+++ b/win/rc/itk.rc
@@ -1,4 +1,4 @@
-// RCS: @(#) $Id: itk.rc,v 1.5 2001/05/22 06:25:48 davygrvy Exp $
+// RCS: @(#) $Id: itk.rc,v 1.6 2001/05/22 22:41:54 davygrvy Exp $
 //
 // Version resource script.
 //
@@ -19,8 +19,8 @@
 
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION    ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL
- PRODUCTVERSION ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL
+ FILEVERSION    ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL,0
+ PRODUCTVERSION ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL,0
  FILEFLAGSMASK	0x3fL
 #ifdef DEBUG
  FILEFLAGS	VS_FF_DEBUG
