--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.10 2001/05/22 22:41:45 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.11 2001/05/22 23:57:28 davygrvy Exp $
 ######################################################################
 # All needed information is derived from running vcvars32.bat
 #
@@ -160,8 +160,8 @@ TK_INCLUDES	= -I"$(TKROOT)\generic" -I"$(TKROOT)\xlib"
 ITK_INCLUDES	= -I$(WINDIR) -I$(GENERICDIR)
 ITCL_INCLUDES	= -I"$(ITCLDIR)\generic"
 ITK_DEFINES	= -DBUILD_itk -DTCL_THREADS=1
-ITK_EXE_CFLAGS	= $(ccommon) $(cdebug) $(crt) $(cdll) $(TCL_INCLUDES) $(TK_INCLUDES) \
-		$(ITCL_INCLUDES) $(ITK_DEFINES)
+ITK_EXE_CFLAGS	= $(ccommon) $(cdebug) $(crt) $(cdll) $(ITCL_INCLUDES) $(ITK_INCLUDES) \
+		$(TCL_INCLUDES) $(TK_INCLUDES) $(ITK_DEFINES)
 
 !if $(USE_TCL_STUBS)
 ITK_CFLAGS	= $(ITK_EXE_CFLAGS) -DUSE_TCL_STUBS -DUSE_TK_STUBS -DUSE_ITCL_STUBS
