--- a/win/rc/itk.rc
+++ b/win/rc/itk.rc
@@ -1,4 +1,4 @@
-// RCS: @(#) $Id: itk.rc,v 1.7 2001/05/25 01:09:15 davygrvy Exp $
+// RCS: @(#) $Id: itk.rc,v 1.8 2001/05/27 02:16:19 davygrvy Exp $
 //
 // Version resource script.
 //
@@ -11,7 +11,7 @@
 //
 // build-up the name suffix that defines the type of build this is.
 //
-#if DEBUG == 1
+#if DEBUG
 #define SUFFIX_DEBUG	    "d"
 #else
 #define SUFFIX_DEBUG	    ""
@@ -24,7 +24,7 @@ VS_VERSION_INFO VERSIONINFO
  FILEVERSION    ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL,0
  PRODUCTVERSION ITCL_MAJOR_VERSION,ITCL_MINOR_VERSION,ITCL_RELEASE_LEVEL,0
  FILEFLAGSMASK	0x3fL
-#ifdef DEBUG
+#if DEBUG
  FILEFLAGS	VS_FF_DEBUG
 #else
  FILEFLAGS	0x0L
@@ -32,6 +32,7 @@ VS_VERSION_INFO VERSIONINFO
  FILEOS		VOS__WINDOWS32
  FILETYPE	VFT_DLL
  FILESUBTYPE	0x0L
+
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
