Fix to repect the ${prefix} and ${exec_prefix} variables [patch #427782]

--- a/configure.in
+++ b/configure.in
@@ -43,6 +43,17 @@ AC_SUBST(VERSION)
 
 eval AC_DEFINE_UNQUOTED(VERSION, "${VERSION}")
 
+#------------------------------------------------------------------------
+# Handle the --prefix=... option
+#------------------------------------------------------------------------
+
+if test "${prefix}" = "NONE"; then
+    prefix=/usr/local
+fi
+if test "${exec_prefix}" = "NONE"; then
+    exec_prefix=$prefix
+fi
+
 #--------------------------------------------------------------------
 # Check whether --enable-gcc or --disable-gcc was given.  Do this 
 # before AC_CYGWIN is called so the compiler can 
