--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.11 2001/05/22 23:57:28 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.12 2001/06/22 04:39:46 davygrvy Exp $
 ######################################################################
 # All needed information is derived from running vcvars32.bat
 #
@@ -228,8 +228,11 @@ install: all
 !if $(ISTCLINSTALL) == 0
 # Only from the sources of Tcl does genStubs.tcl exist.
 genstubs:
-    $(TCLSH) $(TCLDIR)\tools\genStubs.tcl $(GENERICDIR) \
+    $(TCLSH) $(TCLROOT)\tools\genStubs.tcl $(GENERICDIR) \
         $(GENERICDIR)\itk.decls
+!else
+genstubs:
+    @echo ERROR: Can't rebuild stubs tables without the Tcl source distribution
 !endif
 
 ######################################################################
