--- a/Makefile.in
+++ b/Makefile.in
@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.17 2001/05/29 15:51:16 andreas_kupries Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.18 2002/03/03 01:57:11 andreas_kupries Exp $
 
 #========================================================================
 # Edit the following few lines when writing a new extension
@@ -215,7 +215,7 @@ INCLUDES = @TCL_INCLUDES@ @TK_INCLUDES@ $(ITK_INCLUDES)
 
 EXTRA_CFLAGS = $(AC_FLAGS) $(PROTO_FLAGS) $(MEM_DEBUG_FLAGS) $(NO_DEPRECATED_FLAGS) $(TCL_EXTRA_CFLAGS)
 
-DEFS = @DEFS@ $(EXTRA_CFLAGS) -DITK_LIBRARY=\"$(ITK_LIBRARY)\"
+DEFS = @DEFS@ $(EXTRA_CFLAGS) -DITK_LIBRARY=\"$(ITK_LIBRARY)\" -DUSE_NON_CONST
 
 ACLOCAL_M4 = $(srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/../config/mkinstalldirs
