--- a/Makefile.in
+++ b/Makefile.in
@@ -7,47 +7,37 @@
 #	replaced in the actual Makefile.
 #
 # Copyright (c) 1999 Scriptics Corporation.
+# Copyright (c) 2002 ActiveState Corporation.
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.18 2002/03/03 01:57:11 andreas_kupries Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.19 2002/03/29 04:43:49 hobbs Exp $
 
 #========================================================================
 # Edit the following few lines when writing a new extension
 #========================================================================
 
 #========================================================================
-# Change the name of the variable "exampleA_LIB_FILE" to match the one
-# used in the configure script.  This is the parameterized name of the
-# library that we are building.
-#========================================================================
-
-lib_BINARIES=$(itk_LIB_FILE) $(itkstub_LIB_FILE)
-BINARIES=$(lib_BINARIES)
-
-#========================================================================
 # Enumerate the names of the source files included in this package.
 # This will be used when a dist target is added to the Makefile.
 #========================================================================
 
-WIN_DIR=$(srcdir)/win
-UNIX_DIR=$(srcdir)/unix
-GENERIC_DIR=$(srcdir)/generic
-PLATFORM_DIR=@PLATFORM_DIR@
+WIN_DIR		= $(srcdir)/win
+UNIX_DIR	= $(srcdir)/unix
+GENERIC_DIR	= $(srcdir)/generic
+PLATFORM_DIR	= @PLATFORM_DIR@
 
-WIN_SOURCES=$(PLATFORM_DIR)/tclAppInit.c \
-	$(PLATFORM_DIR)/dllEntryPoint.c
-UNIX_SOURCES=$(PLATFORM_DIR)/tclAppInit.c
-GENERIC_SOURCES = $(GENERIC_DIR)/itk_cmds.c \
+WIN_SOURCES	= $(PLATFORM_DIR)/tclAppInit.c $(PLATFORM_DIR)/dllEntryPoint.c
+UNIX_SOURCES	= $(PLATFORM_DIR)/tclAppInit.c
+
+itk_SOURCES	= $(GENERIC_DIR)/itk_cmds.c \
 	$(GENERIC_DIR)/itk_option.c \
 	$(GENERIC_DIR)/itk_archetype.c \
 	$(GENERIC_DIR)/itk_util.c \
 	$(GENERIC_DIR)/itkStubInit.c \
-	$(GENERIC_DIR)/itkStubLib.c 
-PLATFORM_SOURCES = @PLATFORM_SOURCES@
-itk_SOURCES = $(PLATFORM_SOURCES) $(GENERIC_SOURCES)
-SOURCES = $(itk_SOURCES)
+	$(GENERIC_DIR)/itkStubLib.c \
+	@PLATFORM_SOURCES@
 
 #========================================================================
 # Enumerate the names of the object files included in this package.
@@ -55,44 +45,32 @@ SOURCES = $(itk_SOURCES)
 # most cases these object files will correspond to the source files
 # above.
 #
+# "sample_LIB_FILE" refers to the library (dynamic or static as per
+# configuration options) composed of the named objects.
 #========================================================================
 
-WIN_OBJECTS = dllEntryPoint.$(OBJEXT)
-UNIX_OBJECTS =
-GENERIC_OBJECTS = itk_cmds.$(OBJEXT) \
+WIN_OBJECTS	= dllEntryPoint.$(OBJEXT)
+UNIX_OBJECTS	=
+
+itk_OBJECTS	= itk_cmds.$(OBJEXT) \
 	itk_option.$(OBJEXT) \
 	itk_archetype.$(OBJEXT) \
 	itk_util.$(OBJEXT) \
 	itkStubInit.$(OBJEXT) \
-	itkStubLib.$(OBJEXT) 
-PLATFORM_OBJECTS = @PLATFORM_OBJECTS@
-itk_OBJECTS = $(PLATFORM_OBJECTS) $(GENERIC_OBJECTS)
-itkstub_OBJECTS = itkStubLib.$(OBJEXT)
-OBJECTS = $(itk_OBJECTS) $(itkstub_OBJECTS)
+	itkStubLib.$(OBJEXT) \
+	@PLATFORM_OBJECTS@
 
-#========================================================================
-# The substitution of "exampleA_LIB_FILE" into the variable name below
-# let's us refer to the objects for the library without knowing the name
-# of the library in advance.  It also lets us use the "$@" variable in
-# the rule for building the library, so we can refer to both the list of 
-# objects and the library itself in a platform-independent manner.
-#========================================================================
+itkstub_OBJECTS	= itkStubLib.$(OBJEXT)
 
-itk_LIB_FILE = @itk_LIB_FILE@
-$(itk_LIB_FILE)_OBJECTS = $(itk_OBJECTS)
-
+itk_LIB_FILE	= @itk_LIB_FILE@
 itkstub_LIB_FILE = @itkstub_LIB_FILE@
-$(itkstub_LIB_FILE)_OBJECTS = $(itkstub_OBJECTS)
-
 itclstub_LIB_FILE = @itclstub_LIB_FILE@
-
-tkstub_LIB_SPEC = @tkstub_LIB_SPEC@
 
 #========================================================================
 # This is a list of header files to be installed
 #========================================================================
 
-GENERIC_HDRS= \
+GENERIC_HDRS	= \
 	$(srcdir)/generic/itk.h \
 	$(srcdir)/generic/itkDecls.h
 
@@ -101,13 +79,11 @@ GENERIC_HDRS= \
 # have been added to the configure script.
 #========================================================================
 
-SAMPLE_NEW_VAR=@SAMPLE_NEW_VAR@
+ITK_LIBRARY		= $(prefix)/lib/itk$(VERSION)
 
-ITK_LIBRARY = $(prefix)/lib/itk$(VERSION)
-
-ITK_GENERIC_DIR_NATIVE = @ITK_GENERIC_DIR_NATIVE@
-ITK_UNIX_DIR_NATIVE = @ITK_UNIX_DIR_NATIVE@
-ITK_WIN_DIR_NATIVE = @ITK_WIN_DIR_NATIVE@
+ITK_GENERIC_DIR_NATIVE	= @ITK_GENERIC_DIR_NATIVE@
+ITK_UNIX_DIR_NATIVE	= @ITK_UNIX_DIR_NATIVE@
+ITK_WIN_DIR_NATIVE	= @ITK_WIN_DIR_NATIVE@
 
 #========================================================================
 # Nothing of the variables below this line need to be changed.  Please
@@ -115,118 +91,112 @@ ITK_WIN_DIR_NATIVE = @ITK_WIN_DIR_NATIVE@
 # correct.
 #========================================================================
 
-SHELL = @SHELL@
+#========================================================================
+# Change the name of the variable "exampleA_LIB_FILE" to match the one
+# used in the configure script.  This is the parameterized name of the
+# library that we are building.
+#========================================================================
 
-srcdir = @srcdir@
-top_srcdir = @top_srcdir@
-prefix = @prefix@
-exec_prefix = @exec_prefix@
+lib_BINARIES	= $($(PACKAGE)_LIB_FILE) $($(PACKAGE)stub_LIB_FILE)
+BINARIES	= $(lib_BINARIES)
 
-bindir = @bindir@
-sbindir = @sbindir@
-libexecdir = @libexecdir@
-datadir = @datadir@
-sysconfdir = @sysconfdir@
-sharedstatedir = @sharedstatedir@
-localstatedir = @localstatedir@
-libdir = @libdir@
-infodir = @infodir@
-mandir = @mandir@
-includedir = @includedir@
-oldincludedir = /usr/include
+SHELL		= @SHELL@
 
-DESTDIR =
+srcdir		= @srcdir@
+top_srcdir	= @top_srcdir@
+prefix		= @prefix@
+exec_prefix	= @exec_prefix@
 
-pkgdatadir = $(datadir)/@PACKAGE@@VERSION@
-pkglibdir = $(libdir)/@PACKAGE@@VERSION@
-pkgincludedir = $(includedir)/@PACKAGE@@VERSION@
+bindir		= @bindir@
+libdir		= @libdir@
+datadir		= @datadir@
+mandir		= @mandir@
+includedir	= @includedir@
 
-top_builddir = .
+DESTDIR		=
 
-#INSTALL = $(top_srcdir)/../config/install-sh -c
-INSTALL = $(TCLSH_PROG) `@CYGPATH@ $(top_srcdir)/../config/installFile.tcl` -c
-INSTALL_PROGRAM = @INSTALL_PROGRAM@
-INSTALL_DATA = @INSTALL_DATA@
-INSTALL_SCRIPT = @INSTALL_SCRIPT@
-INSTALL_STRIP_FLAG =
-transform = @program_transform_name@
+PKG_DIR		= $(PACKAGE)$(VERSION)
+pkgdatadir	= $(datadir)/$(PKG_DIR)
+pkglibdir	= $(libdir)/$(PKG_DIR)
+pkgincludedir	= $(includedir)/$(PKG_DIR)
 
-NORMAL_INSTALL = :
-PRE_INSTALL = :
-POST_INSTALL = :
-NORMAL_UNINSTALL = :
-PRE_UNINSTALL = :
-POST_UNINSTALL = :
+top_builddir	= .
 
-PACKAGE = @PACKAGE@
-VERSION = @VERSION@
-CC = @CC@
-CFLAGS_DEBUG = @CFLAGS_DEBUG@
-CFLAGS_DEFAULT = @CFLAGS_DEFAULT@
-CFLAGS_OPTIMIZE = @CFLAGS_OPTIMIZE@
-CLEANFILES = @CLEANFILES@
-EXEEXT = @EXEEXT@
-LDFLAGS_DEBUG = @LDFLAGS_DEBUG@
-LDFLAGS_DEFAULT = @LDFLAGS_DEFAULT@
+INSTALL		= @INSTALL@
+INSTALL_PROGRAM	= @INSTALL_PROGRAM@
+INSTALL_DATA	= @INSTALL_DATA@
+INSTALL_SCRIPT	= @INSTALL_SCRIPT@
+
+PACKAGE		= @PACKAGE@
+VERSION		= @VERSION@
+CC		= @CC@
+CFLAGS_DEBUG	= @CFLAGS_DEBUG@
+CFLAGS_DEFAULT	= @CFLAGS_DEFAULT@
+CFLAGS_OPTIMIZE	= @CFLAGS_OPTIMIZE@
+CLEANFILES	= @CLEANFILES@
+EXEEXT		= @EXEEXT@
+LDFLAGS_DEBUG	= @LDFLAGS_DEBUG@
+LDFLAGS_DEFAULT	= @LDFLAGS_DEFAULT@
 LDFLAGS_OPTIMIZE = @LDFLAGS_OPTIMIZE@
-MAKE_LIB = @MAKE_LIB@
-MAKE_SHARED_LIB = @MAKE_SHARED_LIB@
-MAKE_STATIC_LIB = @MAKE_STATIC_LIB@
-OBJEXT = @OBJEXT@
-RANLIB = @RANLIB@
-SHLIB_CFLAGS = @SHLIB_CFLAGS@
-SHLIB_LD = @SHLIB_LD@
-SHLIB_LDFLAGS = @SHLIB_LDFLAGS@
-SHLIB_LD_LIBS = @SHLIB_LD_LIBS@
-STLIB_LD = @STLIB_LD@
-TCL_BIN_DIR = @TCL_BIN_DIR@
-TCL_DEFS = @TCL_DEFS@
-TCL_EXTRA_CFLAGS = @TCL_EXTRA_CFLAGS@
-TCL_LD_FLAGS = @TCL_LD_FLAGS@
-TCL_LIBS = @TCL_LIBS@
-TCL_SHLIB_LD_LIBS = @TCL_SHLIB_LD_LIBS@
-TCL_SRC_DIR = @TCL_SRC_DIR@
-TCL_DBGX = @TCL_DBGX@
-TCL_STUB_LIB_FILE = @TCL_STUB_LIB_FILE@
-TCL_STUB_LIB_SPEC = @TCL_STUB_LIB_SPEC@
-TCL_TOOL_DIR_NATIVE = @TCL_TOOL_DIR_NATIVE@
+MAKE_LIB	= @MAKE_LIB@
+MAKE_SHARED_LIB	= @MAKE_SHARED_LIB@
+MAKE_STATIC_LIB	= @MAKE_STATIC_LIB@
+MAKE_STUB_LIB	= @MAKE_STUB_LIB@
+OBJEXT		= @OBJEXT@
+RANLIB		= @RANLIB@
+SHLIB_CFLAGS	= @SHLIB_CFLAGS@
+SHLIB_LD	= @SHLIB_LD@
+SHLIB_LDFLAGS	= @SHLIB_LDFLAGS@
+SHLIB_LD_LIBS	= @SHLIB_LD_LIBS@
+STLIB_LD	= @STLIB_LD@
+TCL_DEFS	= @TCL_DEFS@
+TCL_BIN_DIR	= @TCL_BIN_DIR@
+TCL_SRC_DIR	= @TCL_SRC_DIR@
+TK_SRC_DIR	= @TK_SRC_DIR@
+TK_BIN_DIR	= @TK_BIN_DIR@
 TCL_TOP_DIR_NATIVE = @TCL_TOP_DIR_NATIVE@
-TCL_UNIX_DIR_NATIVE = @TCL_UNIX_DIR_NATIVE@
-TCL_WIN_DIR_NATIVE = @TCL_WIN_DIR_NATIVE@
-INCLUDE_DIR_NATIVE = @INCLUDE_DIR_NATIVE@
-TCL_BMAP_DIR_NATIVE = @TCL_BMAP_DIR_NATIVE@
-TCL_PLATFORM_DIR_NATIVE = @TCL_PLATFORM_DIR_NATIVE@
-TCL_GENERIC_DIR_NATIVE = @TCL_GENERIC_DIR_NATIVE@
-TK_TOP_DIR_NATIVE = $(TK_SRC_DIR)
-TK_SRC_DIR = @TK_SRC_DIR@
-TCLSH_PROG = @TCLSH_PROG@
-WISH_PROG = @WISH_PROG@
+TK_TOP_DIR_NATIVE = @TK_TOP_DIR_NATIVE@
+
+# Not used, but retained for reference of what libs Tcl required
+TCL_LIBS	= @TCL_LIBS@
+
 TK_XINCLUDES = @TK_XINCLUDES@
 TCL_INCLUDES = @TCL_INCLUDES@
 TK_INCLUDES = @TK_INCLUDES@
-ITCL_INCLUDES = @ITCL_INCLUDES@
-ITK_INCLUDES = @ITCL_INCLUDES@ @ITK_INCLUDES@ @TK_XINCLUDES@
 
-AUTOCONF = autoconf
+EXTRA_PATH	= $(top_builddir):$(TCL_BIN_DIR):$(TK_BIN_DIR)
+TCLSH_PROG	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
+		  LD_LIBRARY_PATH="$(EXTRA_PATH):$(LD_LIBRARY_PATH)" \
+		  LIBPATH="$(EXTRA_PATH):${LIBPATH}" \
+		  SHLIB_PATH="$(EXTRA_PATH):${SHLIB_PATH}" \
+		  TCLLIBPATH="$(top_builddir)" \
+		  PATH="$(EXTRA_PATH):$(PATH)" \
+		  @TCLSH_PROG@
+WISH_PROG	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
+		  TK_LIBRARY=`@CYGPATH@ $(TK_SRC_DIR)/library` \
+		  LD_LIBRARY_PATH="$(EXTRA_PATH):$(LD_LIBRARY_PATH)" \
+		  LIBPATH="$(EXTRA_PATH):${LIBPATH}" \
+		  SHLIB_PATH="$(EXTRA_PATH):${SHLIB_PATH}" \
+		  TCLLIBPATH="$(top_builddir) $(top_builddir)/../itcl" \
+		  PATH="$(EXTRA_PATH):$(PATH)" \
+		  @WISH_PROG@
 
-LDFLAGS = $(LDFLAGS_DEFAULT)
+ITCL_INCLUDES	= @ITCL_INCLUDES@
+ITK_INCLUDES	= @ITCL_INCLUDES@ @ITK_INCLUDES@ @TK_XINCLUDES@
+INCLUDES	= @TCL_INCLUDES@ @TK_INCLUDES@ $(ITK_INCLUDES)
 
-INCLUDES = @TCL_INCLUDES@ @TK_INCLUDES@ $(ITK_INCLUDES)
+EXTRA_CFLAGS = $(AC_FLAGS) $(MEM_DEBUG_FLAGS) @EXTRA_CFLAGS@
 
-EXTRA_CFLAGS = $(AC_FLAGS) $(PROTO_FLAGS) $(MEM_DEBUG_FLAGS) $(NO_DEPRECATED_FLAGS) $(TCL_EXTRA_CFLAGS)
+DEFS		= @DEFS@ $(TCL_DEFS) $(EXTRA_CFLAGS) \
+		  -DITK_LIBRARY=\"$(ITK_LIBRARY)\" -DUSE_NON_CONST
 
-DEFS = @DEFS@ $(EXTRA_CFLAGS) -DITK_LIBRARY=\"$(ITK_LIBRARY)\" -DUSE_NON_CONST
+CONFIG_CLEAN_FILES = Makefile
 
-ACLOCAL_M4 = $(srcdir)/aclocal.m4
-mkinstalldirs = $(SHELL) $(top_srcdir)/../config/mkinstalldirs
-
-CPPFLAGS = @CPPFLAGS@
-LIBS = @LIBS@
-AR = ar
-CFLAGS = @CFLAGS@
-COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
-CCLD = $(CC)
-LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
+CPPFLAGS	= @CPPFLAGS@
+LIBS		= @LIBS@
+AR		= ar
+CFLAGS		= @CFLAGS@
+COMPILE		= $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 
 #========================================================================
 # Start of user-definable TARGETS section
@@ -264,7 +234,7 @@ install-binaries: binaries install-lib-binaries install-bin-binaries
 #========================================================================
 
 install-libraries: libraries
-	$(mkinstalldirs) $(includedir)
+	mkdir -p $(includedir)
 	@echo "Installing header files in $(includedir)"
 	@for i in $(GENERIC_HDRS) ; do \
 	    echo "Installing $$i" ; \
@@ -282,7 +252,7 @@ install-libraries: libraries
 #========================================================================
 
 install-doc: doc
-	$(mkinstalldirs) $(mandir)/mann
+	mkdir -p $(mandir)/mann
 	@echo "Installing man pages in $(mandir)"
 	@for i in $(srcdir)/doc/*.n; \
 	    do \
@@ -291,9 +261,10 @@ install-doc: doc
 	    $(INSTALL_DATA) $$i $(mandir)/mann ; \
 	    done
 
-test: $(TCLSH_PROG)
-	$(TCLSH_PROG) `@CYGPATH@ $(srcdir)/tests/all.tcl` \
-		-exedir `@CYGPATH@ $(bindir)` $(TESTFLAGS)
+test: binaries libraries
+	ITCL_LIBRARY=`@CYGPATH@ @itcl_SRC_DIR@/library` \
+	ITK_LIBRARY=`@CYGPATH@ $(srcdir)/library` \
+	$(WISH_PROG) `@CYGPATH@ $(srcdir)/tests/all.tcl` $(TESTFLAGS) | cat
 
 depend:
 
@@ -311,15 +282,15 @@ depend:
 # name from "exampleA" to your package's name.
 #========================================================================
 
-$(itk_LIB_FILE): $(itk_OBJECTS)
-	-rm -f $(itk_LIB_FILE)
-	@MAKE_LIB@
-	$(RANLIB) $(itk_LIB_FILE)
+$($(PACKAGE)_LIB_FILE): $($(PACKAGE)_OBJECTS)
+	-rm -f $($(PACKAGE)_LIB_FILE)
+	${MAKE_LIB}
+	$(RANLIB) $($(PACKAGE)_LIB_FILE)
 
-$(itkstub_LIB_FILE): $(itkstub_OBJECTS)
-	-rm -f $(itkstub_LIB_FILE)
-	@MAKE_STATIC_LIB@
-	$(RANLIB) $(itkstub_LIB_FILE)
+$($(PACKAGE)stub_LIB_FILE): $($(PACKAGE)stub_OBJECTS)
+	-rm -f $($(PACKAGE)stub_LIB_FILE)
+	${MAKE_STUB_LIB}
+	$(RANLIB) $($(PACKAGE)stub_LIB_FILE)
 
 #========================================================================
 # We need to enumerate the list of .c to .o lines here.
@@ -396,28 +367,22 @@ distclean: clean
 install-lib-binaries: installdirs
 	@list='$(lib_BINARIES)'; for p in $$list; do \
 	  if test -f $$p; then \
+	    echo " $(INSTALL_DATA) $$p $(DESTDIR)$(pkglibdir)/$$p"; \
+	    $(INSTALL_DATA) $$p $(DESTDIR)$(pkglibdir)/$$p; \
+	    echo " $(RANLIB) $(DESTDIR)$(pkglibdir)/$$p"; \
+	    $(RANLIB) $(DESTDIR)$(pkglibdir)/$$p; \
 	    ext=`echo $$p|sed -e "s/.*\.//"`; \
 	    if test "x$$ext" = "xdll"; then \
-	        echo " $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/$$p"; \
-	        $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/$$p; \
 		lib=`basename $$p|sed -e 's/.[^.]*$$//'`.lib; \
 		if test -f $$lib; then \
-		    echo " $(INSTALL_PROGRAM) $$lib $(DESTDIR)$(libdir)/$$lib"; \
-	            $(INSTALL_PROGRAM) $$lib $(DESTDIR)$(libdir)/$$lib; \
+		    echo " $(INSTALL_DATA) $$lib $(DESTDIR)$(pkglibdir)/$$lib"; \
+	            $(INSTALL_DATA) $$lib $(DESTDIR)$(pkglibdir)/$$lib; \
 		fi; \
-	    else \
-		echo " $(INSTALL_PROGRAM) $$p $(DESTDIR)$(libdir)/$$p"; \
-	        $(INSTALL_PROGRAM) $$p $(DESTDIR)$(libdir)/$$p; \
 	    fi; \
-	  else :; fi; \
-	done
-	@list='$(lib_BINARIES)'; for p in $$list; do \
-	  if test -f $$p; then \
-	    echo " $(RANLIB) $(DESTDIR)$(libdir)/$$p"; \
-	    $(RANLIB) $(DESTDIR)$(libdir)/$$p; \
-	  else :; fi; \
+	  fi; \
 	done
 	$(INSTALL_DATA) pkgIndex.tcl $(pkglibdir)
+	: $(INSTALL_DATA) itkConfig.sh $(libdir)
 
 #========================================================================
 # Install binary executables (e.g. .exe files)
@@ -433,29 +398,22 @@ install-bin-binaries: installdirs
 	  else :; fi; \
 	done
 
-.SUFFIXES: .c .o .obj
+.SUFFIXES: .c .$(OBJEXT)
 
 Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
-#config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
-#	$(SHELL) ./config.status --recheck
-#$(srcdir)/configure: $(srcdir)/configure.in $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES)
-#	cd $(srcdir) && $(AUTOCONF)
-
-
 uninstall-binaries:
-	@$(NORMAL_UNINSTALL)
 	list='$(BINARIES)'; for p in $$list; do \
 	  rm -f $(DESTDIR)$(libdir)/$$p; \
 	done
 
 installdirs:
-	$(mkinstalldirs)  $(DESTDIR)$(libdir)
-	$(mkinstalldirs)  $(DESTDIR)$(bindir)
-	$(mkinstalldirs)  $(DESTDIR)$(pkglibdir)
-	$(mkinstalldirs)  $(ITK_LIBRARY)
+	mkdir -p  $(DESTDIR)$(libdir)
+	mkdir -p  $(DESTDIR)$(bindir)
+	mkdir -p  $(DESTDIR)$(pkglibdir)
+	mkdir -p  $(ITK_LIBRARY)
 
 .PHONY: all binaries clean depend distclean doc install installdirs \
 libraries test
