* itcl/configure: 	* itcl/configure.in: 	* itk/configure: 	* itk/configure.in: redid generation of itclConfig.sh (making it 	work on Windows broke Unix).  Retested so that it is happy on 	Windows and Unix (calls ${CYGPATH} only when necessary).

--- a/configure.in
+++ b/configure.in
@@ -267,7 +267,7 @@ SC_MAKE_LIB
 #--------------------------------------------------------------------
 
 if test "${TEA_PLATFORM}" = "windows" -a "$GCC" != "yes" ; then
-    SHLIB_LD_LIBS="${SHLIB_LD_LIBS} ${itcl_STUB_LIB_PATH}"
+    SHLIB_LD_LIBS="${SHLIB_LD_LIBS} \"`${CYGPATH} ${itcl_STUB_LIB_PATH}`\""
 else
     SHLIB_LD_LIBS="${SHLIB_LD_LIBS} ${itcl_STUB_LIB_SPEC}"
 fi
