--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.20 2002/04/01 21:26:31 hobbs Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.21 2002/04/04 05:40:29 hobbs Exp $
 
 #========================================================================
 # Edit the following few lines when writing a new extension
@@ -78,8 +78,6 @@ GENERIC_HDRS	= \
 # Add additional lines to handle any additional AC_SUBST cases that
 # have been added to the configure script.
 #========================================================================
-
-ITK_LIBRARY		= $(prefix)/lib/itk$(VERSION)
 
 ITK_GENERIC_DIR_NATIVE	= @ITK_GENERIC_DIR_NATIVE@
 ITK_UNIX_DIR_NATIVE	= @ITK_UNIX_DIR_NATIVE@
@@ -164,31 +162,36 @@ TK_XINCLUDES = @TK_XINCLUDES@
 TCL_INCLUDES = @TCL_INCLUDES@
 TK_INCLUDES = @TK_INCLUDES@
 
+#========================================================================
+# TCLLIBPATH seeds the auto_path in Tcl's init.tcl so we can test our
+# package without installing.  The other environment variables allow us
+# to test against an uninstalled Tcl.  Add special env vars that you
+# require for testing here (like TCLX_LIBRARY).
+#========================================================================
+
 EXTRA_PATH	= $(top_builddir):$(TCL_BIN_DIR):$(TK_BIN_DIR)
-TCLSH_PROG	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
-		  LD_LIBRARY_PATH="$(EXTRA_PATH):$(LD_LIBRARY_PATH)" \
-		  LIBPATH="$(EXTRA_PATH):${LIBPATH}" \
-		  SHLIB_PATH="$(EXTRA_PATH):${SHLIB_PATH}" \
-		  TCLLIBPATH="$(top_builddir)" \
-		  PATH="$(EXTRA_PATH):$(PATH)" \
-		  @TCLSH_PROG@
-WISH_PROG	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
+TCLSH_ENV	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
 		  TK_LIBRARY=`@CYGPATH@ $(TK_SRC_DIR)/library` \
+		  ITCL_LIBRARY=`@CYGPATH@ @itcl_SRC_DIR@/library` \
+		  ITK_LIBRARY=`@CYGPATH@ $(srcdir)/library` \
 		  LD_LIBRARY_PATH="$(EXTRA_PATH):$(LD_LIBRARY_PATH)" \
 		  LIBPATH="$(EXTRA_PATH):${LIBPATH}" \
 		  SHLIB_PATH="$(EXTRA_PATH):${SHLIB_PATH}" \
-		  TCLLIBPATH="$(top_builddir) $(top_builddir)/../itcl" \
 		  PATH="$(EXTRA_PATH):$(PATH)" \
-		  @WISH_PROG@
+		  TCLLIBPATH="$(top_builddir) $(top_builddir)/../itcl"
+TCLSH_PROG	= @TCLSH_PROG@
+WISH_PROG	= @WISH_PROG@
+TCLSH		= $(TCLSH_ENV) $(TCLSH_PROG)
+WISH		= $(TCLSH_ENV) $(WISH_PROG)
 
 ITCL_INCLUDES	= @ITCL_INCLUDES@
 ITK_INCLUDES	= @ITCL_INCLUDES@ @ITK_INCLUDES@ @TK_XINCLUDES@
 INCLUDES	= @TCL_INCLUDES@ @TK_INCLUDES@ $(ITK_INCLUDES)
 
-EXTRA_CFLAGS = $(AC_FLAGS) $(MEM_DEBUG_FLAGS) @EXTRA_CFLAGS@
+EXTRA_CFLAGS	= $(AC_FLAGS) $(MEM_DEBUG_FLAGS) @EXTRA_CFLAGS@
 
 DEFS		= @DEFS@ $(TCL_DEFS) $(EXTRA_CFLAGS) \
-		  -DITK_LIBRARY=\"$(ITK_LIBRARY)\" -DUSE_NON_CONST
+		  -DITK_LIBRARY=\"$(pkglibdir)\" -DUSE_NON_CONST
 
 CONFIG_CLEAN_FILES = Makefile
 
@@ -234,16 +237,17 @@ install-binaries: binaries install-lib-binaries install-bin-binaries
 #========================================================================
 
 install-libraries: libraries
-	mkdir -p $(includedir)
-	@echo "Installing header files in $(includedir)"
+	@mkdir -p $(DESTDIR)$(includedir)
+	@echo "Installing header files in $(DESTDIR)$(includedir)"
 	@for i in $(GENERIC_HDRS) ; do \
 	    echo "Installing $$i" ; \
-	    $(INSTALL_DATA) $$i $(includedir) ; \
+	    $(INSTALL_DATA) $$i $(DESTDIR)$(includedir) ; \
 	done;
-	@echo "Installing library files in $(ITK_LIBRARY)"
+	@mkdir -p $(DESTDIR)$(pkglibdir)
+	@echo "Installing library files in $(DESTDIR)$(pkglibdir)"
 	@for i in $(srcdir)/library/*.* $(srcdir)/library/tclIndex ; do \
 	    echo "Installing $$i" ; \
-	    $(INSTALL_DATA) $$i $(ITK_LIBRARY) ; \
+	    $(INSTALL_DATA) $$i $(DESTDIR)$(pkglibdir) ; \
 	done;
 
 #========================================================================
@@ -252,19 +256,22 @@ install-libraries: libraries
 #========================================================================
 
 install-doc: doc
-	mkdir -p $(mandir)/mann
-	@echo "Installing man pages in $(mandir)"
-	@for i in $(srcdir)/doc/*.n; \
-	    do \
-	    echo "Installing $$i info $(mandir)/mann"; \
-	    rm -f $(mandir)/mann/`basename $$i`; \
-	    $(INSTALL_DATA) $$i $(mandir)/mann ; \
-	    done
+	@mkdir -p $(DESTDIR)$(mandir)/mann
+	@echo "Installing man pages in $(DESTDIR)$(mandir)"
+	@for i in $(srcdir)/doc/*.n; do \
+	    echo "Installing $$i"; \
+	    rm -f $(DESTDIR)$(mandir)/mann/`basename $$i`; \
+	    $(INSTALL_DATA) $$i $(DESTDIR)$(mandir)/mann ; \
+	done
 
 test: binaries libraries
-	ITCL_LIBRARY=`@CYGPATH@ @itcl_SRC_DIR@/library` \
-	ITK_LIBRARY=`@CYGPATH@ $(srcdir)/library` \
-	$(WISH_PROG) `@CYGPATH@ $(srcdir)/tests/all.tcl` $(TESTFLAGS) | cat
+	$(WISH) `@CYGPATH@ $(srcdir)/tests/all.tcl` $(TESTFLAGS) | cat
+
+shell: binaries libraries
+	@$(WISH) $(SCRIPT)
+
+gdb:
+	$(TCLSH_ENV) gdb $(WISH_PROG) $(SCRIPT)
 
 depend:
 
@@ -294,9 +301,6 @@ $($(PACKAGE)stub_LIB_FILE): $($(PACKAGE)stub_OBJECTS)
 
 #========================================================================
 # We need to enumerate the list of .c to .o lines here.
-# Unfortunately, there does not seem to be any other way to do this
-# in a Makefile-independent way.  We can't use VPATH because it picks up
-# object files that may be located in the source directory.
 #
 # In the following lines, $(srcdir) refers to the toplevel directory
 # containing your extension.  If your sources are in a subdirectory,
@@ -304,32 +308,19 @@ $($(PACKAGE)stub_LIB_FILE): $($(PACKAGE)stub_OBJECTS)
 #
 # exampleA.$(OBJEXT): $(srcdir)/src/win/exampleA.c
 # 	$(COMPILE) -c `@CYGPATH@ $(srcdir)/src/win/exampleA.c` -o $@
+#
+# Setting the VPATH variable to a list of paths will cause the makefile
+# to look into these paths when resolving .c to .obj dependencies.
+# As necessary, add $(srcdir):$(srcdir)/compat:....
 #========================================================================
+
+VPATH = $(srcdir)/generic:$(PLATFORM_DIR)
 
 dllEntryPoint.$(OBJEXT): $(WIN_DIR)/dllEntryPoint.c
 	$(COMPILE) -c `@CYGPATH@ $(WIN_DIR)/dllEntryPoint.c` -o $@
 
-tclAppInit.$(OBJEXT): $(PLATFORM_DIR)/tclAppInit.c
-	$(COMPILE) -c `@CYGPATH@ $(PLATFORM_DIR)/tclAppInit.c` -o $@
-
-itkStubInit.$(OBJEXT): $(GENERIC_DIR)/itkStubInit.c
-	$(COMPILE) -c `@CYGPATH@ $(GENERIC_DIR)/itkStubInit.c` -o $@
-
-itkStubLib.$(OBJEXT): $(GENERIC_DIR)/itkStubLib.c
-	$(COMPILE) -c `@CYGPATH@ $(GENERIC_DIR)/itkStubLib.c` -o $@
-
-itk_cmds.$(OBJEXT): $(GENERIC_DIR)/itk_cmds.c
-	$(COMPILE) -c `@CYGPATH@ $(GENERIC_DIR)/itk_cmds.c` -o $@
-
-itk_option.$(OBJEXT): $(GENERIC_DIR)/itk_option.c
-	$(COMPILE) -c `@CYGPATH@ $(GENERIC_DIR)/itk_option.c` -o $@
-
-itk_archetype.$(OBJEXT): $(GENERIC_DIR)/itk_archetype.c
-	$(COMPILE) -c `@CYGPATH@ $(GENERIC_DIR)/itk_archetype.c` -o $@
-
-itk_util.$(OBJEXT): $(GENERIC_DIR)/itk_util.c
-	$(COMPILE) -c `@CYGPATH@ $(GENERIC_DIR)/itk_util.c` -o $@
-
+.c.$(OBJEXT):
+	$(COMPILE) -c `@CYGPATH@ $<` -o $@
 
 #========================================================================
 # End of user-definable section
@@ -349,8 +340,7 @@ clean:
 distclean: clean
 	-rm -f *.tab.c
 	-rm -f Makefile $(CONFIG_CLEAN_FILES)
-	-rm -f config.cache config.log stamp-h stamp-h[0-9]*
-	-rm -f config.status
+	-rm -f config.cache config.log config.status
 
 #========================================================================
 # Install binary object libraries.  On Windows this includes both .dll and
@@ -365,6 +355,7 @@ distclean: clean
 #========================================================================
 
 install-lib-binaries: installdirs
+	@mkdir -p $(DESTDIR)$(pkglibdir)
 	@list='$(lib_BINARIES)'; for p in $$list; do \
 	  if test -f $$p; then \
 	    echo " $(INSTALL_PROGRAM) $$p $(DESTDIR)$(pkglibdir)/$$p"; \
@@ -381,8 +372,8 @@ install-lib-binaries: installdirs
 	    fi; \
 	  fi; \
 	done
-	$(INSTALL_DATA) pkgIndex.tcl $(pkglibdir)
-	: $(INSTALL_DATA) itkConfig.sh $(libdir)
+	$(INSTALL_DATA) pkgIndex.tcl $(DESTDIR)$(pkglibdir)
+	: $(INSTALL_DATA) itkConfig.sh $(DESTDIR)$(libdir)
 
 #========================================================================
 # Install binary executables (e.g. .exe files)
@@ -391,6 +382,7 @@ install-lib-binaries: installdirs
 #========================================================================
 
 install-bin-binaries: installdirs
+	@mkdir -p $(DESTDIR)$(bindir)
 	@list='$(bin_BINARIES)'; for p in $$list; do \
 	  if test -f $$p; then \
 	    echo " $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/$$p"; \
@@ -408,15 +400,11 @@ uninstall-binaries:
 	list='$(BINARIES)'; for p in $$list; do \
 	  rm -f $(DESTDIR)$(libdir)/$$p; \
 	done
+	list='$(bin_BINARIES)'; for p in $$list; do \
+	  rm -f $(DESTDIR)$(bindir)/$$p; \
+	done
 
-installdirs:
-	mkdir -p  $(DESTDIR)$(libdir)
-	mkdir -p  $(DESTDIR)$(bindir)
-	mkdir -p  $(DESTDIR)$(pkglibdir)
-	mkdir -p  $(ITK_LIBRARY)
-
-.PHONY: all binaries clean depend distclean doc install installdirs \
-libraries test
+.PHONY: all binaries clean depend distclean doc install libraries test
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
