--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.13 2002/04/20 08:09:08 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.14 2002/08/11 04:35:16 davygrvy Exp $
 #------------------------------------------------------------------------------
 #  Do not modify this file!
 #------------------------------------------------------------------------------
@@ -238,7 +238,7 @@ install: all
 !if !$(TCLINSTALL)
 # Only from the sources of Tcl does genStubs.tcl exist.
 genstubs:
-    $(TCLSH) $(TCLROOT)\tools\genStubs.tcl $(GENERICDIR) \
+    $(TCLSH) $(TCLDIR)\tools\genStubs.tcl $(GENERICDIR) \
         $(GENERICDIR)\itk.decls
 !else
 genstubs:
