--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.14 2002/08/11 04:35:16 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.15 2002/08/11 06:03:25 davygrvy Exp $
 #------------------------------------------------------------------------------
 #  Do not modify this file!
 #------------------------------------------------------------------------------
@@ -222,7 +222,7 @@ install: all
 	if not exist "$(LIB_INSTALL_DIR)" mkdir "$(LIB_INSTALL_DIR)"
 	if not exist "$(SCRIPT_INSTALL_DIR)" mkdir "$(SCRIPT_INSTALL_DIR)"
 	if not exist "$(INCLUDE_INSTALL_DIR)" mkdir "$(INCLUDE_INSTALL_DIR)"
-	copy $(ITKTARGET) "$(SCRIPT_INSTALL_DIR)"
+	copy $(ITKLIB) "$(SCRIPT_INSTALL_DIR)"
 	copy $(ITKSTUBLIB) "$(LIB_INSTALL_DIR)"
 	copy $(ROOT)\generic\itk.h "$(INCLUDE_INSTALL_DIR)"
 	copy $(ROOT)\generic\itkDecls.h "$(INCLUDE_INSTALL_DIR)"
