changes to support building against 8.0.5

--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.20 2003/12/23 05:45:56 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.21 2003/12/23 06:58:02 davygrvy Exp $
 #------------------------------------------------------------------------------
 #  Do not modify this file!
 #------------------------------------------------------------------------------
@@ -216,12 +216,14 @@ ITK_DEFINES	= -DBUILD_itk -DTCL_THREADS=1
 ITK_EXE_CFLAGS	= $(cdebug) $(cflags) $(crt) $(ITCL_INCLUDES) $(ITK_INCLUDES) \
 		$(TCL_INCLUDES) $(TK_INCLUDES) $(ITK_DEFINES)
 
-### By convention, static build do not use Stubs.  This is just a practice,
+### By convention, static builds do not use Stubs.  This is just a practice,
 ### not a technical limitation.
 !if $(STATIC_BUILD)
 ITK_CFLAGS	= $(ITK_EXE_CFLAGS) -DSTATIC_BUILD
-!else
+!elseif $(TCL_DOES_STUBS)
 ITK_CFLAGS	= $(ITK_EXE_CFLAGS) -DUSE_TCL_STUBS -DUSE_TK_STUBS -DUSE_ITCL_STUBS
+!else
+ITK_CFLAGS	= $(ITK_EXE_CFLAGS)
 !endif
 
 #---------------------------------------------------------------------
